--- a/index.css
+++ b/index.css
@@ -653,6 +653,11 @@ body {
   justify-content: center;
 }
 
+.approvals-page .user-list-table td:last-child {
+    padding-right: 0.1rem;
+    padding-left: 0.1rem;
+}
+
 .action-buttons button:not(.icon-btn) {
     border: none;
     border-radius: 0.375rem;
@@ -915,7 +920,7 @@ body {
 .modal-body .input-group input,
 .modal-body .input-group select,
 .modal-body .input-group textarea {
-    font-size: 0.9rem;
+    font-size: 1.43rem; /* ~16px to prevent zoom on mobile */
 }
 
 .input-grid-col-2 {
@@ -2349,9 +2354,9 @@ body {
 /* --- Approvals Page --- */
 .approvals-page .user-list-table th:nth-child(1) { width: 10%; }
 .approvals-page .user-list-table th:nth-child(2) { width: 30%; }
-.approvals-page .user-list-table th:nth-child(3) { width: 20%; }
+.approvals-page .user-list-table th:nth-child(3) { width: 15%; }
 .approvals-page .user-list-table th:nth-child(4) { width: 15%; }
-.approvals-page .user-list-table th:nth-child(5) { width: 25%; }
+.approvals-page .user-list-table th:nth-child(5) { width: 30%; }
 
 /* --- Modal Tables --- */
 .modal-content .mass-delegate-table th:nth-child(1) { width: 10%; } /* # */
