--- a/index.css
+++ b/index.css
@@ -2361,17 +2361,18 @@ body {
 /* --- Modal Tables --- */
 .modal-content .mass-delegate-table th:nth-child(1) { width: 10%; } /* # */
 .modal-content .mass-delegate-table th:nth-child(2) { width: 25%; } /* فعالیت / عنوان */
-.modal-content .mass-delegate-table th:nth-child(3) { width: 20%; } /* پروژه / اقدام */
+.modal-content .mass-delegate-table th:nth-child(3) { width: 15%; } /* پروژه / اقدام */
 .modal-content .mass-delegate-table th:nth-child(4) { width: 20%; } /* مسئول فعلی */
-.modal-content .mass-delegate-table th:nth-child(5) { width: 25%; } /* مسئول جدید */
+.modal-content .mass-delegate-table th:nth-child(5) { width: 30%; } /* مسئول جدید */
 
 .modal-content .completed-tasks-table th:nth-child(1) { width: 10%; } /* # */
-.modal-content .completed-tasks-table th:nth-child(2) { width: 35%; } /* عنوان */
+.modal-content .completed-tasks-table th:nth-child(2) { width: 30%; } /* عنوان */
 .modal-content .completed-tasks-table th:nth-child(3) { width: 15%; } /* تاریخچه */
-.modal-content .completed-tasks-table th:nth-child(4) { width: 20%; } /* تاریخ تایید نهایی */
+.modal-content .completed-tasks-table th:nth-child(4) { width: 25%; } /* تاریخ تایید نهایی */
 .modal-content .completed-tasks-table th:nth-child(5) { width: 20%; } /* پروژه / اقدام */
 
-.modal-content .completed-tasks-table td:nth-child(3) {
+.modal-content .completed-tasks-table td:nth-child(3),
+.modal-content .completed-tasks-table td:nth-child(4) {
     white-space: nowrap;
 }
 
